# smartauto

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .vale.ini  Cargo.toml  LICENSE.md  README.md  buf.gen.yaml  buf.yaml  bun.lockb  compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  turbo.json
.cargo/: config.toml
.github/workflows/: pre-commit.yml  rust.yml  typescript.yml
backend/: Cargo.toml  Makefile.toml  go.mod  go.sum  main.go
backend/core/: Cargo.toml  build.rs
backend/core/src/: authentication.rs  constants.rs  database.rs  main.rs  smartauto.rs  util.rs
backend/core/src/database/: entity.rs
backend/core/src/services/: admin.rs  auth.rs  echo.rs  entity.rs  error.rs  greeter.rs  mod.rs  util.rs
backend/plugins/test_plugin/: Cargo.toml  Makefile.toml  build.rs
backend/plugins/test_plugin/src/: main.rs
frontend/: Cargo.toml  Makefile.toml
frontend/core/: .gitignore  .prettierignore  .prettierrc  Cargo.toml  Makefile.toml  README.md  Trunk.toml  buf.gen.yaml  bun.lockb  eslint.config.js  hooks.server.ts  index.html  interface.js  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/core/js/: interface.js  mod.js
frontend/core/src/: app.rs  my-element.ts
frontend/core/src/routes/: +layout.svelte  +page.svelte
frontend/plugins/test/: index.html  package.json  pnpm-lock.yaml  rollup.config.js  tailwind.config.ts  tsconfig.json  web-dev-server.config.js
frontend/plugins/test/src/: App.svelte  main.ts
frontend/plugins/test_plugin/: .gitignore  .prettierignore  Cargo.toml  Makefile.toml  bun.lockb  eslint.config.js  index.html  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/plugins/test_plugin/src/: App.svelte  lib.rs  main.ts
frontend/plugins/test_plugin/src/lib/: Counter.svelte
proto/smartauto/v1/: admin_service.proto  auth_service.proto  echo_service.proto  entity.proto  entity_sevice.proto  helloworld.proto
