cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = ["backend/core", "backend/plugins/*"]

[workspace.metadata.cargo-machete]
ignored = ["prost"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
