[package]
name = "smartauto_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
hashbrown = "0.15.2"
prost = "0.13.4"
scylla = "0.15.1"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["gzip", "zstd"] }
tonic-health = "0.12.3"
tonic-reflection = "0.12.3"
tonic-web = "0.12.3"

[build-dependencies]
glob = "0.3.2"
tonic-build = "0.12.3"
