[package]
name = "smartauto_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
#hashbrown = "0.15.2"
prost = "0.13.4"
regex = "1.11.1"
scylla = "0.15.1"
tokio = { version = "1.42.0", features = ["full"] }
tonic = { version = "0.12.3", features = ["gzip", "zstd"] }
tonic-reflection = "0.12.3"
tonic-types = "0.12.3"
tonic-web = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.11.0"

[build-dependencies]
tonic-build = "*"
tonic-buf-build = "*"
