[package]
name = "smartauto_backend"
version = "0.1.0"
edition = "2024"
default-run = "smartauto_backend"

[dependencies]
argon2 = "0.5.3"
chrono = "0.4.39"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
#hashbrown = "0.15.2"
prost = "0.14.0"
regex = "1.11.1"
ring = "0.17.8"
scylla = "0.15.1"
serde = "1.0.217"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
tonic = { version = "0.12.3", features = ["gzip", "zstd"] }
tonic-reflection = "0.12.3"
tonic-types = "0.12.3"
tonic-web = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.11.0"

[build-dependencies]
tonic-build = "*"
tonic-buf-build = "*"
