[package]
name = "smartauto-frontend"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
js-sys = "0.3.76"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = "0.3.76"
yew = { version="0.21.0", features=["csr"] }
