[package]
name = "test_plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13.4"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["gzip", "zstd"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
tonic-build = "0.12.3"
tonic-buf-build = "*"
