[package]
name = "test_plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13.4"
tokio = { version = "1.42.0", features = ["full"] }
tonic = { version = "0.14.0", features = ["gzip", "zstd"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
tonic-build = "0.14.0"
tonic-buf-build = "*"
